# startupdesk

./: .env.example  .gitignore  .replit  README.md  crew_agents.py  groq_client.py  main.py  parsers.py  pyproject.toml  replit.md
attached_assets/: Pasted--CrewAI-MVP-Market-Analyst-for-VC-pitch-deck-review-Updated-Implementation-with-Groq-API--1759600564960_1759600564960.txt
static/: index.html
